--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.css
@@ -1,5 +1,7 @@
 .navbar-custom {
-    background-color: #593096; /* Violeta */
+    background-color: #593096; 
+    box-shadow: 0px 26px 45px rgb(0, 0, 0); /* Sombra más intensa */
+
 }
 .navbar-brand {
     margin: 0;
