--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.css
@@ -79,3 +79,73 @@
     box-shadow: 0px -26px 45px rgb(0, 0, 0); /* Sombra más intensa */
 
 }
+
+/* Medias Queries */
+
+.responsive-text {
+    font-size: 2rem; /* Tamaño base */
+}
+
+.custom-padding {
+    padding: 3rem; /* Equivalente a p-5 */
+}
+
+/* Pantallas extra pequeñas (xs, < 576px) */
+@media (max-width: 575.98px) {
+    .responsive-text {
+        font-size: 1rem;
+    }
+    .custom-padding {
+        padding: 1rem !important; 
+    }
+}
+
+/* Pantallas pequeñas (sm, ≥ 576px) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .responsive-text {
+        font-size: 1.25rem;
+    }
+    .custom-padding {
+        padding: 1.25rem !important; 
+    }
+}
+
+/* Pantallas medianas (md, ≥ 768px) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .responsive-text {
+        font-size: 1.35rem;
+    }
+    .custom-padding {
+        padding: 1.5rem !important; 
+    }
+}
+
+/* Pantallas grandes (lg, ≥ 992px) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .responsive-text {
+        font-size: 1.75rem;
+    }
+    .custom-padding {
+        padding: 2rem !important; 
+    }
+}
+
+/* Pantallas extra grandes (xl, ≥ 1200px) */
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+    .responsive-text {
+        font-size: 2rem;
+    }
+    .custom-padding {
+        padding: 2.5rem !important; 
+    }
+}
+
+/* Pantallas extra extra grandes (xxl, ≥ 1400px) */
+@media (min-width: 1400px) {
+    .responsive-text {
+        font-size: 2.5rem;
+    }
+    .custom-padding {
+        padding: 3rem !important; 
+    }
+}
