--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css
@@ -1,13 +1,15 @@
+.footer-custom{
+    box-shadow: 0px -26px 45px rgb(0, 0, 0);
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+}
 /* -----NAVBAR----- */
 .navbar-custom {
-    background-color: #593096; 
     box-shadow: 0px 26px 45px rgb(0, 0, 0); 
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 30px;
+} 
 
-}
-.navbar-brand {
-    margin: 0;
-    padding: 0;
-}
 
 .logo-img {
     display: block;
@@ -25,18 +27,6 @@
     
 }
 
-.navbar-nav {
-    display: flex; 
-    margin: 0; 
-    
-}
-
-.nav-item {
-    display: flex;
-    margin: 5px 10px 5px 13px;
-}
-
-
 .navbar-shopping{
     background-color: white;
     border-radius: 10px;
@@ -47,6 +37,8 @@
     display: flex;
     align-items: center; 
     gap: 5px; 
+    margin: 5px 10px 5px 13px;
+
 }
 
 .shopping-img {
@@ -55,12 +47,7 @@
     filter: invert(1) grayscale(1) brightness(0) contrast(1);
 }
 
-.nav-link.ver-compra {
-    color: black;
-}
-.nav-link.ver-compra:hover {
-    color: rgb(51, 46, 46);
-}
+
 
 /* Medias Queries */
 
