--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.css
@@ -6,8 +6,14 @@
     width: 350px; 
     height: auto; 
 }
-
-
+.border-custom{ 
+    border-left: 1px solid rgb(0, 0, 0);
+    
+}
+.border-bottom-custom{
+    border-bottom: 1px solid rgb(0, 0, 0);
+    
+}
 @media (max-width: 510px) {
     .text-hidden{
         display: none;
