--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.css
@@ -14,8 +14,21 @@
     border-bottom: 1px solid rgb(0, 0, 0);
     
 }
+
+.d-flex-custom{
+    display: flex;
+}
+.custom-btn {
+    padding: 3px 3px; 
+    font-size: 15px;   
+    border-radius: 3px; 
+  }
+  
 @media (max-width: 510px) {
     .text-hidden{
         display: none;
+    }
+    .d-flex-custom{
+        display: block;
     }
   }
