--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.css
@@ -14,6 +14,21 @@
     border-bottom: 1px solid rgb(0, 0, 0);
     
 }
+.radius-custom-end{
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+.radius-custom-end p{
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+.radius-custom-start{
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+.responsive-text th {
+    font-size: calc(1rem + 0.5vw); /* Aumenta el tamaño del texto con el ancho de la ventana */
+}
 
 .d-flex-custom{
     display: flex;
@@ -24,6 +39,21 @@
     border-radius: 3px; 
   }
   
+  @media (max-width: 770px) {
+    .radius-custom-end{
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+    }
+    .radius-custom-start{
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+    }
+    .radius-custom-start p{
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+    }
+}
+
 @media (max-width: 510px) {
     .text-hidden{
         display: none;
