--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css
@@ -1,9 +1,9 @@
 .footer-custom {
-    box-shadow: 0px 0px 45px 33px rgb(0, 0, 0);
+    box-shadow: 0px 0px 40px 33px rgba(0, 0, 0, 0.8);
 }
 /* -----NAVBAR----- */
 .navbar-custom {
-    box-shadow: 0px 0px 45px 33px rgb(0, 0, 0);
+    box-shadow: 0px 0px 40px 33px rgba(0, 0, 0, 0.8);
 }
 
 body {
