--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css
@@ -11,9 +11,20 @@ body {
     flex-direction: column;
     min-height: 100vh;
 
+    padding-top: 500px; /* Ajusta este valor al alto de tu <nav> */
+
     main {
         flex: 1;
     }
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: rgb(255, 0, 0);
 }
 
 .logo-img {
@@ -58,7 +69,7 @@ body {
 .custom-padding {
     padding: 3rem; /* Equivalente a p-5 */
 }
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .navbar-custom {
         border-bottom-right-radius: 0px;
         border-bottom-left-radius: 0px;
@@ -68,7 +79,7 @@ body {
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
     }
-}
+} */
 /* Pantallas extra pequeñas (xs, < 576px) */
 @media (max-width: 575.98px) {
     .responsive-text {
@@ -127,4 +138,15 @@ body {
     .custom-padding {
         padding: 3rem !important;
     }
+}
+
+/* Estado highlight (cuando el mouse está sobre el botón) */
+.text-light:hover {
+    filter: brightness(0.9);
+}
+
+/* Estado pressed (cuando el botón está siendo presionado) */
+.text-light:active {
+    filter: brightness(0.8);
+    transform: scale(0.98);
 }
